
SET(MODULE_NAME Core)
SET(MODULE_DEPS c)


# FILE(GLOB SRCS src/*.cpp c/*.cpp)
# ADD_LIBRARY(mambaCore ${SRCS})
# TARGET_LINK_LIBRARIES(mambaCore ${MB_EXTERNAL_DEPS})

# FILE(GLOB SRCS c/*.cpp)
# ADD_LIBRARY(mambaCore_C ${SRCS})
# TARGET_LINK_LIBRARIES(mambaCore_C ${MB_EXTERNAL_DEPS})

SET(EXTERNAL_DEPS)

IF(USE_QT)
#       ADD_SUBDIRECTORY(gui)
ENDIF(USE_QT)



IF(USE_QT)
#       TARGET_LINK_LIBRARIES(smilCore smilCoreGui)
ENDIF(USE_QT)





# FILE(GLOB SRCS test/*.cpp)
# ADD_EXECUTABLE(testCore ${SRCS})
# TARGET_LINK_LIBRARIES(testCore smilCore ${QT_LIBRARIES})



ADD_SMIL_LIBRARY(${MODULE_NAME} ${MODULE_DEPS})




IF(WRAP_JAVA)
      FIND_PACKAGE(Java)
      FIND_PACKAGE(JNI)
      
      IF(JNI_FOUND)
	  INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
      ENDIF(JNI_FOUND)
ENDIF(WRAP_JAVA)


IF(WRAP_PYTHON)
      IF(SWIG_FOUND AND PYTHONLIBS_FOUND)
	  SET_SOURCE_FILES_PROPERTIES(smilCorePython.i PROPERTIES CPLUSPLUS ON)
 	  
	  IF(USE_QT)
	      SET(CMAKE_SWIG_FLAGS -DUSE_QT)
	  ENDIF(USE_QT)

	  SWIG_ADD_MODULE(smilCorePython python smilCorePython.i)
	  
# 	  SWIG_ADD_MODULE(smilCoreJava java smilCore.i)
 	  SWIG_LINK_LIBRARIES(smilCorePython smilCore ${PYTHON_LIBRARIES})
	  IF(USE_QT)
# 	      SWIG_LINK_LIBRARIES(smilCorePython smilCoreGui)
	  ENDIF(USE_QT)
# 	  SWIG_LINK_LIBRARIES(smilCoreJava smilCore)
	  
 	  SET_TARGET_PROPERTIES(_smilCorePython PROPERTIES LINKER_LANGUAGE CXX)
#  	  SET_TARGET_PROPERTIES(smilCoreJava PROPERTIES LINKER_LANGUAGE CXX)

      ENDIF(SWIG_FOUND AND PYTHONLIBS_FOUND)


ENDIF(WRAP_PYTHON)
