
SET(MODULE_NAME Core)
SET(MODULE_DEPS)


# FILE(GLOB SRCS src/*.cpp c/*.cpp)
# ADD_LIBRARY(mambaCore ${SRCS})
# TARGET_LINK_LIBRARIES(mambaCore ${MB_EXTERNAL_DEPS})

# FILE(GLOB SRCS c/*.cpp)
# ADD_LIBRARY(mambaCore_C ${SRCS})
# TARGET_LINK_LIBRARIES(mambaCore_C ${MB_EXTERNAL_DEPS})

SET(EXTERNAL_DEPS)

IF(USE_QT)
#       ADD_SUBDIRECTORY(gui)
ENDIF(USE_QT)



IF(USE_QT)
#       TARGET_LINK_LIBRARIES(smilCore smilCoreGui)
ENDIF(USE_QT)





# FILE(GLOB SRCS test/*.cpp)
# ADD_EXECUTABLE(testCore ${SRCS})
# TARGET_LINK_LIBRARIES(testCore smilCore ${QT_LIBRARIES})



ADD_SMIL_LIBRARY(${MODULE_NAME} ${MODULE_DEPS})




IF(WRAP_JAVA)
      FIND_PACKAGE(Java)
      FIND_PACKAGE(JNI)
      
      IF(JNI_FOUND)
	  INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
      ENDIF(JNI_FOUND)
ENDIF(WRAP_JAVA)


